fix: fixed the bug where if sub categories lists exceeds. the layout would collapse.

--- a/public/CSS/layout/header.css
+++ b/public/CSS/layout/header.css
@@ -153,6 +153,9 @@
 
 .header__sub-categories-list {
   flex: 3.5;
+  max-width: 100%;
+  overflow-x: auto;
+  overflow-y: none;
 }
 
 .header__sub-categories-list-content {
